[gd_scene load_steps=24 format=3 uid="uid://dxk7c6wikv43p"]

[ext_resource type="Script" path="res://main_menu/main_menu.gd" id="1_sgu6m"]
[ext_resource type="Texture2D" uid="uid://5mo2p51wsuay" path="res://assets/Backgrounds/space.png" id="1_w5je3"]
[ext_resource type="Shader" path="res://main_menu/main_menu_scroll.gdshader" id="2_ot4nc"]
[ext_resource type="FontFile" uid="uid://dkg32o3qfh2n7" path="res://assets/Fonts/pixelmix.ttf" id="2_t4ix4"]
[ext_resource type="Texture2D" uid="uid://ckvltbyqf3xwo" path="res://assets/Sprites/drop_ship/drop_ship_large.png" id="5_h2a75"]
[ext_resource type="Script" path="res://main_menu/drop_ship_main_menu_texture.gd" id="6_g3xgq"]
[ext_resource type="PackedScene" uid="uid://bkr08nyqjnpg5" path="res://main_menu/options_menu.tscn" id="7_x8lvi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s783n"]
bg_color = Color(1, 1, 1, 0.803922)
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6wg4l"]
bg_color = Color(1, 1, 1, 0.376471)
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xeebp"]
bg_color = Color(1, 1, 1, 0)
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_60h6q"]
bg_color = Color(1, 1, 1, 0.803922)
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m5lrp"]
bg_color = Color(1, 1, 1, 0.376471)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cprxr"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(1, 1, 1, 0.803922)
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1bd5i"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(1, 1, 1, 0.376471)
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_46uyr"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(1, 1, 1, 0.803922)
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dr21c"]
content_margin_left = 8.0
content_margin_right = 8.0
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)

[sub_resource type="Theme" id="Theme_x4ceu"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_focus_color = Color(0, 0, 0, 1)
Button/colors/font_hover_pressed_color = Color(0, 0, 0, 1)
Button/colors/font_pressed_color = Color(0, 0, 0, 1)
Button/fonts/font = ExtResource("2_t4ix4")
Button/styles/focus = SubResource("StyleBoxFlat_s783n")
Button/styles/hover = SubResource("StyleBoxFlat_6wg4l")
Button/styles/normal = SubResource("StyleBoxFlat_xeebp")
Button/styles/pressed = SubResource("StyleBoxFlat_60h6q")
TabContainer/colors/font_selected_color = Color(0, 0, 0, 1)
TabContainer/font_sizes/font_size = 24
TabContainer/fonts/font = ExtResource("2_t4ix4")
TabContainer/styles/panel = SubResource("StyleBoxFlat_m5lrp")
TabContainer/styles/tab_focus = SubResource("StyleBoxFlat_cprxr")
TabContainer/styles/tab_hovered = SubResource("StyleBoxFlat_1bd5i")
TabContainer/styles/tab_selected = SubResource("StyleBoxFlat_46uyr")
TabContainer/styles/tab_unselected = SubResource("StyleBoxFlat_dr21c")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7cjl6"]
shader = ExtResource("2_ot4nc")
shader_parameter/speed_x = 0.1
shader_parameter/speed_y = 0.1
shader_parameter/frequency_y = 2.0
shader_parameter/amplitude_y = 0.05

[sub_resource type="Animation" id="Animation_vlrxt"]
resource_name = "init_dropship"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.333333, 0.5, 1),
"transitions": PackedFloat32Array(1.6818, 1, 0.466516, 200),
"update": 0,
"values": [Vector2(-2287, -431), Vector2(-1587, -240), Vector2(-907.142, -132.951), Vector2(-412, -26)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.0333333, 0.333333, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(673, 531), Vector2(412, 412), Vector2(412, 412)]
}

[sub_resource type="Animation" id="Animation_dk7bx"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-412, -26)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(412, 412)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_eesv0"]
_data = {
"RESET": SubResource("Animation_dk7bx"),
"init_dropship": SubResource("Animation_vlrxt")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8ioed"]
bg_color = Color(0.6, 0.6, 0.6, 0.333333)
border_width_bottom = 4
corner_detail = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1p2d2"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_bottom = 4
corner_detail = 1

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_x4ceu")
script = ExtResource("1_sgu6m")

[node name="BackGroundTextureRect" type="TextureRect" parent="."]
texture_repeat = 2
material = SubResource("ShaderMaterial_7cjl6")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -384.0
offset_top = -216.0
offset_right = 384.0
offset_bottom = 216.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_w5je3")

[node name="ContentMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="Control" type="Control" parent="ContentMarginContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 4

[node name="DropShipTextureRect" type="TextureRect" parent="ContentMarginContainer/Control"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -412.0
offset_top = -26.0
offset_right = 119.0
offset_bottom = 386.0
grow_horizontal = 0
grow_vertical = 2
texture = ExtResource("5_h2a75")
expand_mode = 2
stretch_mode = 4
flip_h = true
script = ExtResource("6_g3xgq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="ContentMarginContainer/Control"]
root_node = NodePath("../DropShipTextureRect")
libraries = {
"": SubResource("AnimationLibrary_eesv0")
}

[node name="MarginContainer" type="MarginContainer" parent="ContentMarginContainer"]
layout_mode = 2
theme_override_constants/margin_top = 64

[node name="VBoxContainer" type="VBoxContainer" parent="ContentMarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 64

[node name="Label" type="Label" parent="ContentMarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.221264, 0.399307, 0.745747, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_outline_size = 16
theme_override_fonts/font = ExtResource("2_t4ix4")
theme_override_font_sizes/font_size = 64
text = "Orbital assault"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ContentMarginContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="ContentMarginContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 32
alignment = 1

[node name="TopSeperatorPadding" type="Control" parent="ContentMarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="StartButton" type="Button" parent="ContentMarginContainer/HBoxContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t4ix4")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_8ioed")
theme_override_styles/normal = SubResource("StyleBoxFlat_1p2d2")
text = "Start game"

[node name="OptionsButton" type="Button" parent="ContentMarginContainer/HBoxContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t4ix4")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_8ioed")
theme_override_styles/normal = SubResource("StyleBoxFlat_1p2d2")
text = "Options"

[node name="ExitButton" type="Button" parent="ContentMarginContainer/HBoxContainer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_t4ix4")
theme_override_font_sizes/font_size = 32
theme_override_styles/hover = SubResource("StyleBoxFlat_8ioed")
theme_override_styles/normal = SubResource("StyleBoxFlat_1p2d2")
text = "Exit game"

[node name="options_menu" parent="." instance=ExtResource("7_x8lvi")]
visible = false
layout_mode = 1
