[gd_scene load_steps=19 format=3 uid="uid://dxk7c6wikv43p"]

[ext_resource type="Theme" uid="uid://c3a3bfndbpf03" path="res://ui/main_menu/UI_theme.tres" id="1_7cya5"]
[ext_resource type="Script" path="res://ui/main_menu/main_menu.gd" id="1_sgu6m"]
[ext_resource type="Texture2D" uid="uid://5mo2p51wsuay" path="res://ui/main_menu/assets/textures/space.png" id="1_w5je3"]
[ext_resource type="Shader" path="res://ui/main_menu/main_menu_scroll.gdshader" id="2_ot4nc"]
[ext_resource type="FontFile" uid="uid://dkg32o3qfh2n7" path="res://assets/Fonts/pixelmix.ttf" id="2_t4ix4"]
[ext_resource type="Texture2D" uid="uid://ckvltbyqf3xwo" path="res://maps/objects/ship/drop_ship_large.png" id="5_h2a75"]
[ext_resource type="Script" path="res://ui/main_menu/drop_ship_main_menu_texture.gd" id="6_g3xgq"]
[ext_resource type="PackedScene" uid="uid://bkr08nyqjnpg5" path="res://ui/main_menu/OptionMenu.tscn" id="7_x8lvi"]
[ext_resource type="PackedScene" uid="uid://b7bby50sr8bfd" path="res://ui/main_menu/mission_select.tscn" id="8_cavjr"]
[ext_resource type="Texture2D" uid="uid://r032l1xiye2a" path="res://ui/main_menu/assets/textures/astroid_rocks.png" id="9_bh1l6"]
[ext_resource type="PackedScene" uid="uid://cissp82tlrhpu" path="res://ui/main_menu/player_progress.tscn" id="11_4ytoj"]
[ext_resource type="PackedScene" uid="uid://ck8goydb0ke1" path="res://assets/Sound/UISounds.tscn" id="12_ul0e8"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7cjl6"]
shader = ExtResource("2_ot4nc")
shader_parameter/speed_x = 0.1
shader_parameter/speed_y = 0.1
shader_parameter/frequency_y = 2.0
shader_parameter/amplitude_y = 0.05

[sub_resource type="Animation" id="Animation_enoc0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_8b7nh"]
resource_name = "in_new_scene"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 0.8),
"update": 0,
"values": [Vector2(124, -2327), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_l2jtp"]
resource_name = "to_new_scene"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Control:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(0.63728, 0.81),
"update": 0,
"values": [Vector2(0, 0), Vector2(124, -2327)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_t0w68"]
_data = {
"RESET": SubResource("Animation_enoc0"),
"in_new_scene": SubResource("Animation_8b7nh"),
"to_new_scene": SubResource("Animation_l2jtp")
}

[sub_resource type="Environment" id="Environment_pbfcc"]
background_mode = 3
glow_enabled = true
glow_intensity = 1.0
glow_blend_mode = 0

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -3.0
offset_bottom = -3.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_7cya5")
script = ExtResource("1_sgu6m")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0.0862745, 1)

[node name="BackGroundTextureRect" type="TextureRect" parent="."]
modulate = Color(2, 2, 1.9, 1)
texture_repeat = 2
material = SubResource("ShaderMaterial_7cjl6")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_w5je3")

[node name="mission_select" parent="." instance=ExtResource("8_cavjr")]
visible = false
layout_mode = 1

[node name="ContentMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="MainMenu" type="VBoxContainer" parent="ContentMarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 64
alignment = 1

[node name="Label" type="Label" parent="ContentMarginContainer/MainMenu"]
modulate = Color(1, 1, 1.3, 1)
layout_mode = 2
theme_override_colors/font_shadow_color = Color(0.221264, 0.399307, 0.745747, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_offset_y = 4
theme_override_constants/shadow_outline_size = 16
theme_override_fonts/font = ExtResource("2_t4ix4")
theme_override_font_sizes/font_size = 64
text = "Orbital deployment"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TopSeperatorPadding" type="Control" parent="ContentMarginContainer/MainMenu"]
layout_mode = 2

[node name="NavigationButtons" type="VBoxContainer" parent="ContentMarginContainer/MainMenu"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 32
alignment = 1

[node name="SelectMissionButton" type="Button" parent="ContentMarginContainer/MainMenu/NavigationButtons"]
clip_contents = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
text = " Play "

[node name="PlayerProgressButton" type="Button" parent="ContentMarginContainer/MainMenu/NavigationButtons"]
clip_contents = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
text = "Player progress"

[node name="OptionsButton" type="Button" parent="ContentMarginContainer/MainMenu/NavigationButtons"]
clip_contents = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
text = " Options "

[node name="ExitButton" type="Button" parent="ContentMarginContainer/MainMenu/NavigationButtons"]
clip_contents = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
text = " Exit game "

[node name="OptionMenu" parent="ContentMarginContainer" instance=ExtResource("7_x8lvi")]
visible = false
layout_mode = 2

[node name="Footer" type="HBoxContainer" parent="ContentMarginContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ContentMarginContainer/Footer"]
layout_mode = 2
size_flags_vertical = 8

[node name="ShipAnchor" type="Control" parent="ContentMarginContainer/Footer/VBoxContainer"]
custom_minimum_size = Vector2(0, 273.935)
layout_mode = 2

[node name="Spaceship" type="TextureRect" parent="ContentMarginContainer/Footer/VBoxContainer/ShipAnchor"]
modulate = Color(1.4, 1.2, 1.2, 1)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -206.0
offset_top = -412.0
offset_right = 206.0
grow_horizontal = 2
grow_vertical = 0
pivot_offset = Vector2(206, 206)
texture = ExtResource("5_h2a75")
stretch_mode = 4
flip_h = true
script = ExtResource("6_g3xgq")

[node name="ShipAudioStreamPlayer" type="AudioStreamPlayer" parent="ContentMarginContainer/Footer/VBoxContainer/ShipAnchor/Spaceship"]

[node name="HoverAudioStreamPlayer" type="AudioStreamPlayer" parent="ContentMarginContainer/Footer/VBoxContainer/ShipAnchor/Spaceship"]

[node name="Credits" type="Button" parent="ContentMarginContainer/Footer/VBoxContainer"]
clip_contents = true
custom_minimum_size = Vector2(256, 64)
layout_mode = 2
size_flags_vertical = 8
text = "Credits"

[node name="player_progress" parent="." instance=ExtResource("11_4ytoj")]
visible = false
layout_mode = 1

[node name="transistion_content" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -252.0
offset_top = 1118.0
offset_right = 205.0
offset_bottom = 2788.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="transistion_content"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -471.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect2" type="TextureRect" parent="transistion_content/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("9_bh1l6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="transistion_content"]
libraries = {
"": SubResource("AnimationLibrary_t0w68")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="transistion_content"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_pbfcc")

[node name="UISounds" parent="." instance=ExtResource("12_ul0e8")]
root_path = NodePath("..")

[node name="MainMenuMusicAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
